feat: implement dynamic airport/city discovery and real geocoding for ride locations